# pia-hub

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
compose/: docker-compose.yaml
python_scripts/: legg_til_nye_temaer.py  testdata_tenor.py
python_scripts/models/: Spørsmål.py  Tema.py
python_scripts/models/spørreundersøkelse/: Spørsmål.py  Tema.py  Undertema.py
python_scripts/models/tenor/: Virksomhet.py
python_scripts/sql/: insert_spørsmål.py  insert_spørsmål_tema_relasjon.py  insert_spørsmål_undertema_relasjon.py  insert_svaralternativ.py  insert_tema.py  insert_undertema.py  update_tema_status.py  update_undertema_status.py
python_scripts/tenor/: Oppdater_ekte_orgnr_med_fiktive_data.py  Parse_api_sykefraversstatistikk_response.py  insert_virksomhet.py  insert_virksomhet_naringsundergrupper.py  parse_tenor_fil.py  skriv_til_fil.py
python_scripts/tests/: test_insert_spørsmål.py  test_insert_spørsmål_tema_relasjon.py  test_insert_spørsmål_undertema_relasjon.py  test_insert_svaralternativ.py  test_insert_tema.py  test_insert_undertema.py  test_sql_eksport.py  test_update_tema_status.py  test_update_undertema_status.py
python_scripts/util/: generer_uuider.py  sql_eksport.py
scripts/: bunBuild.sh  fillFiaDatabase.sh  gradleBuild.sh  gradleversions.sh  pythonpackageversions.sh  pythonversions.sh  runBackend.sh
